// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no child elements 1`] = `""`;

exports[`2. a single child element 1`] = `
.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  padding-right: 10px;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c0 .imageContainerClass {
  display: block;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .summary125Class {
  display: block;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c0 .imageContainerClass {
    display: block;
  }

  .c0 .headlineClass {
    font-size: 25px;
    line-height: 28px;
    margin-top: 5px;
  }
}

@media (min-width:768px) {
  .c0 .imageContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    min-width: auto;
    padding-right: 10px;
  }

  .c0 .contentContainerClass {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
  }
}

@media (min-width:1024px) {
  .c0 .summary125Class {
    display: block;
  }

  .c0 .summary145Class {
    display: none;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

<config__Base>
  <div
    className="c0"
  >
    <responsive__SliceContainer>
      <div
        className="c1"
      >
        <responsive__Base>
          <div
            className="c2"
          >
            <responsive__ChildContainer>
              <div
                className="c3"
              >
                <tc-text__TcText>
                  <div
                    className="c4"
                  >
                    standard-1
                  </div>
                </tc-text__TcText>
              </div>
            </responsive__ChildContainer>
          </div>
        </responsive__Base>
      </div>
    </responsive__SliceContainer>
  </div>
</config__Base>
`;

exports[`3. two child elements 1`] = `
.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  padding-right: 10px;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c0 .imageContainerClass {
  display: block;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .summary125Class {
  display: block;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0 10px;
  }
}

@media (min-width:768px) {
  .c0 .imageContainerClass {
    display: block;
  }

  .c0 .headlineClass {
    font-size: 25px;
    line-height: 28px;
    margin-top: 5px;
  }
}

@media (min-width:1024px) {
  .c0 .summary125Class {
    display: block;
  }

  .c0 .summary145Class {
    display: none;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

<config__Base>
  <div
    className="c0"
  >
    <responsive__SliceContainer>
      <div
        className="c1"
      >
        <responsive__Base>
          <div
            className="c2"
          >
            <responsive__ChildContainer>
              <div
                className="c3"
              >
                <tc-text__TcText>
                  <div
                    className="c4"
                  >
                    standard-1
                  </div>
                </tc-text__TcText>
              </div>
            </responsive__ChildContainer>
            <responsive>
              <div
                className="c5"
              />
            </responsive>
            <responsive__ChildContainer>
              <div
                className="c3"
              >
                <tc-text__TcText>
                  <div
                    className="c4"
                  >
                    standard-2
                  </div>
                </tc-text__TcText>
              </div>
            </responsive__ChildContainer>
          </div>
        </responsive__Base>
      </div>
    </responsive__SliceContainer>
  </div>
</config__Base>
`;

exports[`4. three child elements 1`] = `
.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  padding-right: 10px;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c0 .imageContainerClass {
  display: none;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .summary125Class {
  display: block;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0 10px;
  }
}

@media (min-width:768px) {
  .c0 .imageContainerClass {
    display: block;
  }

  .c0 .headlineClass {
    font-size: 25px;
    line-height: 28px;
    margin-top: 5px;
  }
}

@media (min-width:1024px) {
  .c0 .summary125Class {
    display: none;
  }

  .c0 .summary145Class {
    display: block;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 100%;
  }
}

<config__Base>
  <div
    className="c0"
  >
    <responsive__SliceContainer>
      <div
        className="c1"
      >
        <responsive__Base>
          <div
            className="c2"
          >
            <responsive__ChildContainer>
              <div
                className="c3"
              >
                <tc-text__TcText>
                  <div
                    className="c4"
                  >
                    standard-1
                  </div>
                </tc-text__TcText>
              </div>
            </responsive__ChildContainer>
            <responsive>
              <div
                className="c5"
              />
            </responsive>
            <responsive__ChildContainer>
              <div
                className="c3"
              >
                <tc-text__TcText>
                  <div
                    className="c4"
                  >
                    standard-2
                  </div>
                </tc-text__TcText>
              </div>
            </responsive__ChildContainer>
            <responsive>
              <div
                className="c5"
              />
            </responsive>
            <responsive__ChildContainer>
              <div
                className="c3"
              >
                <tc-text__TcText>
                  <div
                    className="c4"
                  >
                    standard-3
                  </div>
                </tc-text__TcText>
              </div>
            </responsive__ChildContainer>
          </div>
        </responsive__Base>
      </div>
    </responsive__SliceContainer>
  </div>
</config__Base>
`;
